compiler/tests/invalid_programs/no_end_modules.jm
!SyntaxError

module foo

  def bar(i:String)
    puts(i)
  end
